--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- First Container -->
     <div class="container-fluid bg-1 text-center">
         <!--<h1 class="margin">Name</h1>-->
-        <img src="img/logo" class="img-fluid" alt="Logo" id="logo">
+        <img src="img/cammi-logo.io" class="img-fluid" alt="Logo" id="logo">
     </div>
 
     <!-- Second Container -->
