--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -46,7 +46,7 @@
 
             <h1 class="margin text-center">Movie Project</h1>
             <p>Text about the project</p>
-            <p>More text about the project.</p>
+            <p>More text about the projectm.</p>
             <a href="https://app.pickcode.io/project/cm368649l349310d53d45lyto">Code</a><br>
             <a href="https://app.pickcode.io/share/cm368649l349310d53d45lyto">Project</a><br>
 
