--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -44,7 +44,7 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Movie Project</h1>
+            <h1 class="margin text-center">Movie Webpage Project</h1>
             <p>Text about the project</p>
             <p>More text about the projectm.</p>
             <a href="https://app.pickcode.io/project/cm368649l349310d53d45lyto">Code</a><br>
