--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -45,6 +45,12 @@
         <div class="container">
 
             <h1 class="margin text-center">Movie Webpage Project</h1>
+            <h2> Context </h2>
+            <h2> Content </h2>
+            <h2> Reflection </h2>
+            <h3> Challenges </h3>
+            <h3> Takeaways </h3>
+            <h3> Next steps </h3>
             <p>Text about the project</p>
             <p>More text about the projectm.</p>
             <a href="https://app.pickcode.io/project/cm368649l349310d53d45lyto">Code</a><br>
