--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -46,13 +46,12 @@
 
             <h1 class="margin text-center">Movie Webpage Project</h1>
             <h2> Context </h2>
+            <p> My partner and I created a Movie Webpage Project for SEP using basic HTML and CSS we have learned. Our movie was based on horror using red and black as our color theme. The title of our horror movie webpage was called "Graveyard Pact"</p>
             <h2> Content </h2>
             <h2> Reflection </h2>
             <h3> Challenges </h3>
             <h3> Takeaways </h3>
             <h3> Next steps </h3>
-            <p>Text about the project</p>
-            <p>More text about the projectm.</p>
             <a href="https://app.pickcode.io/project/cm368649l349310d53d45lyto">Code</a><br>
             <a href="https://app.pickcode.io/share/cm368649l349310d53d45lyto">Project</a><br>
 
