--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -48,14 +48,14 @@
             <h2> Context </h2>
             <p> My partner and I created a Movie Webpage Project for SEP using basic HTML and CSS we have learned. Our movie was based on horror using red and black as our color theme. The title of our horror movie webpage was called "Graveyard Pact."</p>
             <h2> Content </h2>
-            For our movie, we had to distrbute the roles of who is coding what between my partner and I. After, we decided on what our movie should be about and then we started to code for our horror project.  
+            <p>For our movie, we had to distrbute the roles of who is coding what between my partner and I. After, we decided on what our movie should be about and then we started to code for our horror project.</p>
             <h2> Reflection </h2>
             <h3> Challenges </h3>
-            A challenge I faced was trying to find out how to center my image for my project. I was using "text-align" code with "center" for my image element but my image still would not be in the center. Afterward I realized I had to create an "id" and put the id into a "div", then put "text-align: center;" into my id.
+            <p>A challenge I faced was trying to find out how to center my image for my project. I was using "text-align" code with "center" for my image element but my image still would not be in the center. Afterward I realized I had to create an "id" and put the id into a "div", then put "text-align: center;" into my id.</p>
             <h3> Takeaways </h3>
-            I learned to ask questions to my partner and my other peers, in order to figure out how to solve my errors and understand it, to further advance my knowledge and thinking. 
+            <p>I learned to ask questions to my partner and my other peers, in order to figure out how to solve my errors and understand it, to further advance my knowledge and thinking. 
             <h3> Next steps </h3>
-            My next steps would be to have better time management skills in order to create a sequel for my movie project. If I was able to finish the movie webpage faster I believe I could have had the chance to create the sequel to the movie. 
+            <p>My next steps would be to have better time management skills in order to create a sequel for my movie project. If I was able to finish the movie webpage faster I believe I could have had the chance to create the sequel to the movie.</p>
             <a href="https://app.pickcode.io/project/cm368649l349310d53d45lyto">Code</a><br>
             <a href="https://app.pickcode.io/share/cm368649l349310d53d45lyto">Project</a><br>
 
