--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Movie Webpage Project</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
-                            <p class="card-text">A brief explanation of the project.</p>
-                            <a href="#" class="card-link">More</a>
+                            <p class="card-text">My partner and I created a horror movie webpage called "Graveyard Pact."</p>
+                            <a href="projects/movie-webpage.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
