--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>New Jeans.</p>
+                <p>New Jeans</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p>Enhypen</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p>Music</p>
             </div>
         </div>
     </div>
