--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>New Jeans</p>
+                <p>Newjeans</p>
             </div>
             <div class="col-sm-4">
                 <p>Enhypen</p>
