--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -45,8 +45,17 @@
         <div class="container">
 
             <h1 class="margin text-center">CYOA Project</h1>
-            <p> Text </p>
-            <p>More text about the project.</p>
+            <h2>Context</h2> 
+            <p>The prompt of this project was to choose your own adventure using the IDE with your partner.</p>
+            <h2>Content</h2>
+            <p>What my partner and I made in our project was a murder mystery storyline. The people playing our game is the detective, who need to discover who the murder is.</p>
+            <h2>Refection</h2>
+            <h3>Context</h3>
+            <p>The teacher assigned this project for us to communicate with new people that we have not worked with in our IDE. He wants us to practice linking to different files outside the folders or inside.</p>
+            <h3>Challenges</h3>
+            <p>What was difficult with this project was trying to make a plan that can come together in our project. Sometimes, the plan did not match up with our project and had to be changed because of small errors that created a loop in our actual project.</p>
+            <h3>Next step</h3>
+            <p>What I would do differently next time is to always look into the plan more deeply than usual, in order for there not to be errors in our actual project.</p>
             <a href="#">Link about the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
