--- a/index.html
+++ b/index.html
@@ -81,7 +81,16 @@
         </div>
         </a>
     </div>
-
+  <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">CYOA Project</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
+                            <p class="card-text">In this project, my partner and I made a murder mystery project that you can play!</p>
+                            <a href="projects/cyoa.html" class="card-link">More</a>
+                        </div>
+                    </div>
+                </div>
     <!-- Third Container (Grid) -->
     <div class="container-fluid bg-3 text-center">
         <h3 class="margin">About Me</h3><br>
