--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -56,7 +56,7 @@
             <p>What was difficult with this project was trying to make a plan that can come together in our project. Sometimes, the plan did not match up with our project and had to be changed because of small errors that created a loop in our actual project.</p>
             <h3>Next step</h3>
             <p>What I would do differently next time is to always look into the plan more deeply than usual, in order for there not to be errors in our actual project.</p>
-            <a href="#">Link about the project</a><br>
+            <a href="https://github.com/cammiw4628/sep10-cyoa">Link to the CYOA project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
