--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -46,12 +46,12 @@
 
             <h1 class="margin text-center">CYOA Project</h1>
             <h2>Context</h2> 
-            <p>The prompt of this project was to choose your own adventure using the IDE with your partner.</p>
+            <p>The prompt of this project was to create a choose your own adventure story using the IDE with your assigned partner.</p>
             <h2>Content</h2>
-            <p>What my partner and I made in our project was a murder mystery storyline. The people playing our game is the detective, who need to discover who the murder is.</p>
+            <p>What my partner and I made in our project was a murder mystery storyline. The people playing our game are the detective, who need to discover who the murderer is.</p>
             <h2>Refection</h2>
             <h3>Context</h3>
-            <p>The teacher assigned this project for us to communicate with new people that we have not worked with in our IDE. He wants us to practice linking to different files outside the folders or inside.</p>
+            <p>The teacher assigned this project for us to communicate with new people that we have not worked with in our IDE, in order to collaborate. He wants us to practice linking to different files outside the folders or inside, as well as communicating.</p>
             <h3>Challenges</h3>
             <p>What was difficult with this project was trying to make a plan that can come together in our project. Sometimes, the plan did not match up with our project and had to be changed because of small errors that created a loop in our actual project.</p>
             <h3>Next step</h3>
