--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" /> 
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 -->
-        
+
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
@@ -87,11 +87,24 @@
                     </div>
                 </div>
 
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">SEP10 Freedom Project</h5>
+                            <span class="badge text-bg-secondary">New</span>
+                            <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
+                            <p class="card-text">My project with the topic of psychology is a year-long project using skills we learned in class to create an informative website. The website contains information on the topic, as well as present and future innovation ideas.</p>
+                            <a href="sep10-fp.html" class="card-link">More</a>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
         </a>
     </div>
-  
+
     <!-- Third Container (Grid) -->
     <div class="container-fluid bg-3 text-center">
         <h3 class="margin">About Me</h3><br>
