--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
 </head>
 
@@ -90,8 +92,8 @@
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">SEP10 Freedom Project</h5>
-                            <span class="badge text-bg-secondary">New</span>
+                            <h5 class="card-title">SEP10 Freedom Project
+                            <span class="badge text-bg-secondary">Featured</span></h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">My project with the topic of psychology is a year-long project using skills we learned in class to create an informative website. The website contains information on the topic, as well as present and future innovation ideas.</p>
                             <a href="sep10-fp.html" class="card-link">More</a>
