--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <span class="badge text-bg-secondary">Featured</span></h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">My project with the topic of psychology is a year-long project using skills we learned in class to create an informative website. The website contains information on the topic, as well as present and future innovation ideas.</p>
-                            <a href="sep10-fp.html" class="card-link">More</a>
+                            <a href="projects/sep10-fp.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
