--- a/projects/sep10-fp.html
+++ b/projects/sep10-fp.html
@@ -50,8 +50,8 @@
             <p>What I made is a psychology website that consists of information about psychology and some future ideas that can be used to help benefit those who struggle to maintain their own self-esteem. I used knowledge I learned in class and independently learning "animate.css" for animations on my website. I created a blog that contains information about my steps of researching and coding to finish my Freedom Project. My blog has the steps I took along the way to make my current website and helped me organize all my ideas I wanted to incorporate into my website.</p>
             <h2>Reflection</h2>
             <h3>Challenges</h3>
-            <p>I had great difficulty with making my title become accessible for phone users because as my screen size turns smaller, the title is too big that it does not fit the screen</p>
-            <p>I overcame this by using media queries, which is when the screen hits a specific screen size, my title will become a smaller font.</p>
+            <p>I had great difficulty with making my title become accessible for phone users because as my screen size turns smaller, the title is too big that it does not fit the screen.</p>
+            <p>I overcame this by using media queries, which is when the screen hits a specific screen size, my title will become a smaller font size.</p>
             <h3>Takeaways</h3>
             <p>My takeaways are to never give up and always have a spark of motivation inside you because coding becomes very difficult in the future and you tend to start feeling like you are losing hope. It is a normal reaction to feel once in a while but overtime I started to overcome this and kept going, leading to the creation of this website.</p>
             <h3>Next Steps</h3>
