--- a/projects/sep10-fp.html
+++ b/projects/sep10-fp.html
@@ -55,7 +55,7 @@
             <h3>Takeaways</h3>
             <p>My takeaways are to never give up and always have a spark of motivation inside you because coding becomes very difficult in the future and you tend to start feeling like you are losing hope. It is a normal reaction to feel once in a while but overtime I started to overcome this and kept going, leading to the creation of this website.</p>
             <h3>Next Steps</h3>
-            <p>My next steps are to prepare myself for the upcoming year and find ways to further improve my future websites that surpass my current website that I created. With the right amount of motivation i can be sure to improve myself and my knowledge on coding further than before.</p>
+            <p>My next steps are to prepare myself for the upcoming year and find ways to further improve my future websites that surpass my current website that I created. With the right amount of motivation I can be sure to improve myself and my knowledge on coding further than before.</p>
             <a href="https://github.com/cammiw4628/sep10-freedom-project">My Blog</a><br>
             <a href="https://cammiw4628.github.io/sep10-freedom-project/">My Project</a><br>
             <img src="../img/psychology-web.png" class="img-fluid project-img">
